--- a/src/views/partials/headerAdmin.ejs
+++ b/src/views/partials/headerAdmin.ejs
@@ -17,7 +17,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/products">Comprar</a>
                             </li>
-                                                <li class="nav-item">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/admin">Administrador</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="/aboutUs">Sobre Nosotros</a>
                             </li>
                         </ul>
