--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,58 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<%- include('../partials/head')%>
-  
-<%- include('../partials/header')%>
+<%-include("../partials/head.ejs", {title: 'login' })%>
 
-<main>
-    <section class="container bg-light py-5">
-      <ul class="nav nav-pills nav-justified mb-3" id="ex1">
-          <li class="nav-item">
-              <a class="nav-link active" id="tab-login" href="./login">Login</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" id="tab-register" href="./register">Registro</a>
-          </li>
-      </ul>
-   
-      <div class="tab-content">
-          <div class="tab-pane fade show active" id="pills-login">
-              <form action="/users/register" method="post">
-  
-                  <div class="form-outline mb-4">
-                      <input type="email" id="loginName" class="form-control" required/>
-                      <label class="form-label" for="loginName">Email</label>
-                  </div>
-  
-                  <div class="form-outline mb-4">
-                      <input type="password" id="loginPassword" class="form-control" required/>
-                      <label class="form-label" for="loginPassword">Contraseña</label>
-                  </div>
-  
-                  <div class="row mb-4">
-                      <div class="col-md-6 d-flex justify-content-center">
-                          <div class="form-check mb-3 mb-md-0">
-                              <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
-                              <label class="form-check-label" for="loginCheck"> recuerdame </label>
-                          </div>
-                      </div>
-  
-                      <div class="col-md-6 d-flex justify-content-center">
-                          <a href="#!">¿Olvido su contraseña?</a>
-                      </div>
-                  </div>
+<%-include("../partials/header.ejs")%>
 
-                  <button type="submit" class="btn btn-primary btn-block mb-4">Ingresar</button>
+        <main>
+            <section class="container bg-light py-5">
+                <ul class="nav nav-pills nav-justified mb-3" id="ex1">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="tab-login" href="./login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="tab-register" href="./register">Registro</a>
+                    </li>
+                </ul>
 
-                  <div class="text-center">
-                      <p>¿No es usuario? <a href="./register">Registrarse</a></p>
-                  </div>
-              </form>
-          </div>
-  </section>  
-  
-  </main>
-<%- include('../partials/footer')%>
- 
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="pills-login">
+                        <form action="/users/processLogin" method="POST" id="form-login">
+
+                            <div class="form-outline pt-3 mb-4">
+                                <input type="email" id="email" class="form-control" name="email" required />
+                                <label class="form-label py-2" for="loginName">Email</label>
+                            </div>
+
+                            <div class="form-outline mb-4">
+                                <input type="password" id="password" name="password" class="form-control" required />
+                                <label class="form-label py-2" for="loginPassword">Contraseña</label>
+                            </div>
+
+                            <div class="row mb-4">
+                                <div class="col-md-6 d-flex justify-content-center">
+                                    <div class="form-check mb-3 mb-md-0">
+                                        <input class="form-check-input" type="checkbox" value="" id="loginCheck"
+                                            checked />
+                                        <label class="form-check-label" for="loginCheck"> recuerdame </label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6 d-flex justify-content-center">
+                                    <a href="#!">¿Olvido su contraseña?</a>
+                                </div>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary btn-block mb-4">Ingresar</button>
+
+                            <div class="text-center">
+                                <p>¿No es usuario? <a href="./register">Registrarse</a></p>
+                            </div>
+                        </form>
+                    </div>
+            </section>
+
+        </main>
+        <%-include("../partials/footer.ejs")%>
+
 </html>
