--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <%-include("../partials/head.ejs")%>
+<%-include("../partials/head.ejs", {title: 'registro' })%>
   
-  <body>
-    <%-include("../partials/header.ejs")%>
+<%-include("../partials/header.ejs")%>
 <main>
   <section class="container bg-light py-5">
     <ul class="nav nav-pills nav-justified mb-3" id="ex1">
@@ -16,37 +15,65 @@
         </li>
     </ul>
 
-    <div class="tab-content">
+    <div class="col-12">
          <div class="tab-pane fade show active" id="pills-register">
-            <form>
+            <form id="form-register" action="/users/processRegister" method="POST" novalidate>
 
-                <div class="form-outline mb-4">
-                    <input type="text" id="registerName" class="form-control" required/>
-                    <label class="form-label" for="registerName">Nombre y Apellido</label>
-                </div>
+                <div class="row product-detail">
 
-                <div class="form-outline mb-4">
-                    <input type="email" id="registerEmail" class="form-control" required/>
-                    <label class="form-label" for="registerEmail">Email</label>
-                </div>
+                    <div class="col-12 col-md-6 pt-2">
+                      <label for="name" class="form-label">Nombre</label>
+                      <input type="text"
+                      class="form-input form-control <%= locals.errors && errors.name ? 'is-invalid' : null %> " 
+                      value="<%= locals.old && old.name ? old.name : null %>"
+                      id="name"  name="name" title="El nombre debe tener más de dos caracteres"/>
+                      <small id="errorNombre" class="text-danger"><%= locals.errors && errors.name ? errors.name.msg : null %> </small>
+                    </div>
+                    <div class="col-12 col-md-6 pt-2">
+                      <label for="surname" class="form-label">Apellido</label>
+                      <input type="text"
+                      value="<%= locals.old && old.surname ? old.surname : null %>"
+                      class="form-input form-control <%= locals.errors && errors.surname ? 'is-invalid' : null %>"
+                      id="surname" name="surname" title="El apellido debe tener más de dos caracteres"/>
+                      <small id="errorApellido" class="text-danger"><%= locals.errors && errors.surname ? errors.surname.msg : null %></small>
+                    </div>
+                    <div class="col-12 pt-2">
+                      <label for="email" class="form-label">Email</label>
+                      <input type="email"
+                      value="<%= locals.old && old.email ? old.email : null %>"
+                      class="form-input form-control <%= locals.errors && errors.email ? 'is-invalid' : null %>"
+                      id="email" name="email"/>
+                      <small id="errorEmail" class="text-danger"><%= locals.errors && errors.email ? errors.email.msg : null %></small>
+                    </div>
+                  <div class="col-12 col-md-6 pt-2">
+                      <label for="password" class="form-label">Contraseña</label>
+                      <input type="password"
+                      class="form-input form-control <%= locals.errors && errors.password ? 'is-invalid' : null %>" name="password" id="password"/>
+                      <small id="errorPass" class="text-danger"><%= locals.errors && errors.password ? errors.password.msg : null %></small>
+                    </div>
 
-                <div class="form-outline mb-4">
-                    <input type="password" id="registerPassword" class="form-control" required/>
-                    <label class="form-label" for="registerPassword">Contraseña</label>
-                </div>
+                    <div class="col-12 col-md-6 pt-2">
+                      <label for="password2" class="form-label">Reingresar contraseña</label>
+                      <input type="password"
+                      class="form-input form-control <%= locals.errors && errors.password2 ? 'is-invalid' : null %>"
+                      id="password2" name="password2"/>
+                      <small id="errorPass2" class= "text-danger"><%= locals.errors && errors.password2 ? errors.password2.msg : null %></small>
 
-                <div class="form-outline mb-4">
-                    <input type="password" id="registerRepeatPassword" class="form-control" required/>
-                    <label class="form-label" for="registerRepeatPassword">repetir contraseña</label>
-                </div>
+                    </div>
+                    <div class="col-12 py-2 col-md-6 d-flex justify-content-center">
+                   
+                      <div class="form-check d-flex align-items-center">
+                        <input name="bases" class="form-check-input <%= locals.errors && errors.bases ? 'is-invalid' : null %>" type="checkbox" value="" id="terms" style="width:30px; height:30px;">
+                        <label class="form-check-label ms-2" for="terms">
+                          Acepto las bases y condiciones
+                        </label>
+                      </div>
 
-                <div class="form-check d-flex justify-content-center mb-4">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked/>
-                    <label class="form-check-label" for="registerCheck">
-                        Acepto los terminos y condiciones
-                    </label>
-                </div>
+                    
 
+                      </div>
+
+                
                 <button type="submit" class="btn btn-primary btn-block mb-3">Registrarse</button>
             </form>
         </div>
@@ -54,6 +81,6 @@
 </section>
 
 </main>
-    <%-include("../partials/footer.ejs")%>
+<%-include("../partials/footer.ejs")%>
   </body>
 </html>
