--- a/src/views/products/productsList.ejs
+++ b/src/views/products/productsList.ejs
@@ -10,30 +10,34 @@
                         <div class="container products-wrapper">
                             <div class="row">
                                 <% products.forEach((product) => { %>
-                                <div class="col-12 col-sm-6 col-lg-3 my-5">
-                                    <section class="card h-100 shadow ">
-                                                            <figure class="product-box_image">
-                                                            <img width="80%" class="card-img-top" src="<%= product.imagen %>"
-                                                            alt="imagen de producto">
-                                                            </figure>
-                                                            <article class="position-relative ps-3 ">
-                                                            <p class="product-year">
-                                                            Año: <%= product.año %>
-                                                            </p>
-                                                            <p class="product-brand">
-                                                            <b>
-                                                            <%= product.marca %>
-                                                            <%= product.modelo %>
-                                                            </b>
-                                                            </p>
-                                                            <p class="product-price">
-                                                            u$d <%= product.precio %>
-                                                            </p>
-                                                            </article>
-                                                        </section>
+                                    
+                                       <div class="col-12 col-sm-6 col-lg-3 my-5">
+                                        
+                                            <section class="card h-100 shadow ">
+                                                <a href="/productDetail/<%= product.id %>" class="text-decoration-none text-reset">
+                                            <figure class="product-box_image">
+                                            <img width="80%" class="card-img-top" src="<%= product.images[0].name %>"
+                                                 alt="imagen de producto">
+                                            </figure>
+                                            <article class="position-relative ps-3 ">
+                                            <p class="product-year">
+                                              Año: <%= product.year %>
+                                            </p>
+                                            <p class="product-brand">
+                                              <b>
+                                                <%= product.make %> <%= product.model %>
+                                              </b>
+                                            </p>
+                                            <p class="product-price">
+                                              u$d <%= toThousand(product.price) %>
+                                            </p>
+                                            </article>
+                                        </a>
+                                            </section>
+                                        </div>
+                                    <% }) %>
+                                    
                                 </div>
-                            <% }) %>
-                            </div>
                         </div>
                     </div>
                 </div>
