--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<%-include(".. /partials/head.ejs", {title: 'Administración' })%>
+<%-include("./partials/head.ejs", {title: 'Administración' })%>
 
-    <%-include(".. /partials/headerAdmin.ejs")%>
+    <%-include("./partials/headerAdmin.ejs")%>
 
         <main>
-            <section class="bg-white py-5">
+            <section class="container products-wrapper">
                 <div class="row text-center py-3">
                     <h1>Administración de Productos</h1>
                 </div>
-                <% products.forEach(product=> { %>
-                    <div class="container">
-                        <div class="row">
+                <div class="container d-flex justify-content-end">
+                    <button class="btn btn-primary btn-block mb-3" onclick="location.href='/products/add'">Agregar
+                        Nuevo Producto</button>
+                </div>
+
+                <div class="container">
+                    <div class="row">
+                        <% products.forEach(product=> { %>
+
                             <div class="col-12 col-md-4 mb-4">
                                 <div class="card h-100 shadow">
-                                    <img src="<%= product.imagen %>" class="card-img-top"
-                                        alt="<%= product.marca %> <%= product.modelo %>">
+                                    <img src="<%= product.images[0].name %>" class="card-img-top"
+                                        alt="<%= product.make %> <%= product.model %>">
                                     <div class="card-body">
                                         <p class="product-year">
-                                            Año: <%= product.año %>
+                                            Año: <%= product.year %>
                                         </p>
                                         <p class="product-brand">
                                             <b>
-                                                <%= product.marca %>
-                                                    <%= product.modelo %>
+                                                <%= product.make %>
+                                                    <%= product.model %>
                                             </b>
                                         </p>
                                         <p class="product-price">
                                             u$d <%= product.precio %>
                                         </p>
                                         <div class="product-actions">
-                                            <a href="/admin/edit/<%= product.id %>" class="edit-button">Editar</a>
-                                            <a href="/admin/delete/<%= product.id %>" class="delete-button">Eliminar</a>
+                                            <a href="/products/edit/<%= product.id %>" class="edit-button">Editar</a>
+                                            <a href="/products/delete/<%= product.id %>" class="delete-button">Eliminar</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+
+                            <% }); %>
                     </div>
-                    <% }); %>
-                        </div>
-                        <div class="container d-flex justify-content-end">
-                            <button class="btn btn-primary btn-block mb-3" onclick="location.href='/admin/add'">Agregar
-                                Nuevo Producto</button>
-                        </div>
+                </div>
+            </div>
 
             </section>
         </main>
 
-        <%-include(".. /partials/footer.ejs")%>
+        <%-include("./partials/footer.ejs")%>
 
 </html>
