--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -4,29 +4,100 @@
 
     <body>
         <%- include('../partials/header') %>
-
             <main>
-                <section class="bg-white py-5">
-                    <h1 class="text-center ">Agregar Producto</h1>
-                    <div class="container text-center py-3">
-                        
-                        <form method="POST" action="/admin/create">
-                            <label for="año">año:</label><br>
-                            <input type="text" id="año" name="año" value="" required><br><br>
-                            <label for="marca">marca:</label><br>
-                            <input type="text" id="marca" name="marca" value="" required><br><br>
-                            <label for="modelo">modelo:</label><br>
-                            <input type="text" id="modelo" name="modelo" value="" required><br><br>
+                <section class="container products-wrapper">
+                    <div class="container row text-center py-3 mx-auto">
+                        <h1>Agregar producto</h1>
+                        <div class="col-12 col-md-8 mx-auto">
+                            <section class="card h-100 shadow bg-white">
+                                <div class="card-body">
+                                    <form method="POST" class="row" action="/products/create">
+                                        <div class="col-12 col-md-6 mb-3">
+                                            <label class="form-label" for="make">Marca:</label>
+                                            <select class="form-select" name="make" id="">
+                                                <option value="" hidden selected>Seleccione...</option>
+                                                <% makes.forEach(make => { %>
+                                                    <option value="<%= make.id %>"><%= make.name %></option>
+                                                <% }) %>
+                                            </select>
+                                        </div>
+                                        <div class="col-12 col-md-6 mb-3">
+                                            <label class="form-label" for="model">Modelo:</label>
+                                            <select class="form-select" name="model" id="">
+                                                <option value="" hidden selected>Seleccione...</option>
+                                                <% models.forEach(model => { %>
+                                                    <option value="<%= model.id %>"><%= model.name %></option>
+                                                <% }) %>
+                                            </select>
+                                        </div>
+                                        <div class="col-12 col-md-6 mb-3">
+                                            <label class="form-label" for="state">Estado:</label>
+                                            <select class="form-select" name="state" id="">
+                                                <option value="" hidden selected>Seleccione...</option>
+                                                <% states.forEach(state => { %>
+                                                    <option value="<%= state.id %>"><%= state.name %></option>
+                                                <% }) %>
+                                            </select>
+                                        </div>
+                                        <div class="col-12 col-md-6 mb-3">
+                                            <label class="form-label" for="category">Categoría:</label>
+                                            <select class="form-select" name="category" id="">
+                                                <option value="" hidden selected>Seleccione...</option>
+                                                <% categories.forEach(category => { %>
+                                                    <option value="<%= category.id %>"><%= category.name %></option>
+                                                <% }) %>
+                                            </select>
+                                        </div>
+                                        <div class="col-12 col-md-4 mb-3">
+                                            <label class="form-label" for="year">Año:</label>
+                                            <input class="form-control" id="year" name="year" type="number" required />
+                                        </div>
+                                        <div class="col-12 col-md-4 mb-3">
+                                            <label class="form-label" for="mileage">kilometraje:</label>
+                                            <input class="form-control" id="mileage" name="mileage" type="number"
+                                                required/>
+                                        </div> 
+                                        <div class="col-12 col-md-4 mb-3">
+                                            <label class="form-label" for="price">Precio:</label>
+                                            <input class="form-control" id="price" name="price" type="number" required />
 
-                            <label for="kilometraje">kilometraje:</label><br>
-                            <textarea id="kilometraje" name="kilometraje" required></textarea><br><br>
-                            <label for="transmision">transmision:</label><br>
-                            <textarea id="transmision" name="transmision" required></textarea><br><br>
-                            <label for="precio">precio:</label><br>
-                            <textarea id="precio" name="precio" required></textarea><br><br>
+                                        </div>
+                                        <div class="col-12 col-md-6 mb-3">
+                                            <label class="form-label" for="transmission">Transmision:</label>
+                                            <select class="form-select" name="transmission" id="">
+                                                <option value="" hidden selected>Seleccione...</option>
+                                                <% transmissions.forEach(transmission => { %>
+                                                    <option value="<%= transmission.id %>"><%= transmission.name %></option>
+                                                <% }) %>
+                                            </select>
+                                        </div>
+                                        <div class="col-12 col-md-6 mb-3">
+                                            <label class="form-label" for="origin">Origen:</label>
+                                            <select class="form-select" name="origin" id="">
+                                                <option value="" hidden selected>Seleccione...</option>
+                                                <% origins.forEach(origin => { %>
+                                                    <option value="<%= origin.id %>"><%= origin.country %></option>
+                                                <% }) %>
+                                            </select>
+                                        </div>
+                                        <div class="col-12 mb-3">
+                                            <label class="form-label" for="description">Descripción:</label>
 
-                            <button type="submit">Guardar</button>
-                        </form>
+                                            <textarea name="description" class="form-control" style="resize: none;"></textarea>
+                                        </div>    
+                                     
+                                        <div class="col-12 d-flex justify-content-around">
+                                            <div>
+                                                <label class="btn btn-secondary" for="image">Agregar imágen</label>
+                                                <input type="file" id="image" name="image" hidden>
+                                            </div>
+                                            <button class="btn btn-primary" type="submit">Guardar Cambios</button>
+                                        </div>        
+                                    </form>
+                                </div>
+                            </section>
+                        </div>
+
                     </div>
                     <div class="container d-flex justify-content-end">
                         <a href="/admin">Volver a la lista</a>
