--- a/src/views/products/productsList.ejs
+++ b/src/views/products/productsList.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<%- include('../partials/head', {title: 'Editar Producto' }) %>
+<%- include('../partials/head', {title: 'Productos' }) %>
 
     <body>
         <%- include('../partials/header') %>
@@ -14,7 +14,7 @@
                                        <div class="col-12 col-sm-6 col-lg-3 my-5">
                                         
                                             <section class="card h-100 shadow ">
-                                                <a href="/productDetail/<%= product.id %>" class="text-decoration-none text-reset">
+                                                <a href="/products/detail/<%= product.id %>" class="text-decoration-none text-reset">
                                             <figure class="product-box_image">
                                             <img width="80%" class="card-img-top" src="<%= product.images[0].name %>"
                                                  alt="imagen de producto">
